--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -23,7 +23,7 @@
     color: @tooltip-text-color;
     white-space: nowrap;
     max-width: none;
-    .overlay-shadow(@ui-shadow-color);
+    .overlay-shadow(@base-shadow-color);
   }
 
   &.top .tooltip-arrow {
