--- a/styles/settings.less
+++ b/styles/settings.less
@@ -1,6 +1,11 @@
 .settings-view {
   .text(normal);
 
+  .panels {
+    background: @app-background-color;
+  }
+
+
   .section {
     background-color: @app-background-color;
   }
