--- a/styles/atom.less
+++ b/styles/atom.less
@@ -37,3 +37,7 @@ atom-notifications {
   padding: 0 @component-padding / 2;
   margin-left: 2px;
 }
+
+.icon-x::before {
+  content: '✕' !important;
+}
