--- a/styles/atom.less
+++ b/styles/atom.less
@@ -41,3 +41,7 @@ atom-notifications {
 .icon-x::before {
   content: '✕' !important;
 }
+
+.release-notes {
+  background: @app-background-color;
+}
