--- a/styles/atom.less
+++ b/styles/atom.less
@@ -42,6 +42,6 @@ atom-notifications {
   content: '✕' !important;
 }
 
-.release-notes {
+atom-pane-container atom-pane .item-views .pane-item {
   background: @app-background-color;
 }
