image view background fix

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -42,6 +42,9 @@ atom-notifications {
   content: '✕' !important;
 }
 
-atom-pane-container atom-pane .item-views .pane-item {
-  background: @app-background-color;
+atom-pane-container atom-pane .item-views {
+  .image-view,
+  .pane-item {
+    background: @app-background-color;
+  }
 }
