app-background-color consistency

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -43,8 +43,14 @@ atom-notifications {
 }
 
 atom-pane-container atom-pane .item-views {
-  .image-view,
+  background: @app-background-color;
+
   .pane-item {
     background: @app-background-color;
   }
+}
+
+background-tips .background-message {
+  color: @text-color-subtle;
+  background: @app-background-color;
 }
