--- a/styles/panels.less
+++ b/styles/panels.less
@@ -16,12 +16,7 @@ atom-panel-container {
   border: 0;
 }
 
-.focusable-panel {
-  background: @base-panel-color;
-  padding: @component-padding;
-}
-
+.focusable-panel,
 .item-views .focusable-panel {
-  background: @base-panel-color;
   padding: @component-padding;
 }
