background-message fix

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -50,7 +50,7 @@ atom-pane-container atom-pane .item-views {
   }
 }
 
-background-tips .background-message {
-  color: @text-color-subtle;
-  background: @app-background-color;
+.background-message * {
+  color: @base-shadow-color;
+  font-size: 24px;
 }
