git control update

--- a/styles/packages.less
+++ b/styles/packages.less
@@ -39,3 +39,8 @@
     content: '✕';
   }
 }
+
+.git-control .dialog input, .git-control .dialog select, .git-control .dialog textarea {
+  color: @text-color;
+  background: @base-background-color;
+}
