--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -9,6 +9,7 @@
     transition: background @transition-time*2;
     height: @tab-height;
     line-height: @tab-height;
+    margin-left: 1px;
     margin-top: @component-padding + 1px;
     background: @tab-background-color;
     border: 1px solid transparent;
