--- a/styles/atom.less
+++ b/styles/atom.less
@@ -50,3 +50,7 @@ atom-pane-container atom-pane .item-views {
   color: @base-shadow-color;
   font-size: 24px;
 }
+
+.badge {
+  background: @background-color-highlight;
+}
