--- a/styles/packages.less
+++ b/styles/packages.less
@@ -1,4 +1,4 @@
-// color-picker
+// color-picker ----------------------------------------------------------------
 #ColorPicker {
   background: @overlay-background-color !important;
   border-radius: @component-border-radius;
@@ -22,7 +22,7 @@
   color: @text-color;
 }
 
-// git-control
+// git-control -----------------------------------------------------------------
 .git-control {
   .dialog {
     background: @overlay-background-color;
@@ -43,4 +43,48 @@
 .git-control .dialog input, .git-control .dialog select, .git-control .dialog textarea {
   color: @text-color;
   background: @base-background-color;
+}
+
+// toolbar ---------------------------------------------------------------------
+#toolbar {
+  background-color: @base-panel-color;
+  line-height: @tab-bar-height;
+  z-index: 1003;
+
+  &.top {
+    height: @tab-bar-height + 1;
+    position: relative;
+  }
+
+  &.right {
+    width: @tab-bar-height;
+    border-left: 0;
+  }
+
+  &.bottom {
+    height: @tab-bar-height;
+    border-top: 0;
+  }
+
+  &.left {
+    width: @tab-bar-height + 1;
+  }
+
+  &.horizontal {
+    .icon {
+      width: @tab-bar-height;
+    }
+  }
+
+  &.vertical {
+    .icon {
+      height: @tab-bar-height;
+    }
+  }
+
+  .icon {
+    &:before {
+      line-height: @tab-bar-height;
+    }
+  }
 }
