--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -1,4 +1,4 @@
-// Buttons
+// Buttons ---------------------------------------------------------------------
 .btn {
   .button(@button-background-color, @button-background-color-hover, @button-background-color-selected);
 
@@ -22,31 +22,21 @@
   }
 }
 
-.btn:active,
-.btn.selected {
-}
+// Buttons and input in the 'Find and Replace' panel ---------------------------
+.find-and-replace .find-container,
+.find-and-replace .replace-container {
 
-.btn.disabled:hover,
-.btn[disabled]:hover,
-fieldset[disabled] .btn:hover,
-.btn.disabled:focus,
-.btn[disabled]:focus,
-fieldset[disabled] .btn:focus,
-.btn.disabled:active,
-.btn[disabled]:active,
-fieldset[disabled] .btn:active,
-.btn.disabled.active,
-.btn[disabled].active,
-fieldset[disabled] .btn.active {
+    .input-block-item:first-child {
+      padding-right: 0 !important;
+    }
+    .input-block-item:last-child {
+      padding-left: 0;
+    }
 
-}
 
-// Buttons and input in the 'Find and Replace' panel
-.find-and-replace .find-container .btn-group-find,
-.find-and-replace .replace-container .btn-group-replace {
-  margin-left: 0;
-  & .btn {
+  & .btn-group:first-child .btn {
     border-radius: 0 @component-border-radius @component-border-radius 0;
+    border-left: 1px solid @button-border-color;
   }
 }
 
