--- a/styles/lists.less
+++ b/styles/lists.less
@@ -20,7 +20,7 @@
 .select-list.popover-list {
   background: @overlay-background-color;
   padding: @component-padding/2 0 @component-padding/2 0;
-  .overlay-shadow(@base-shadow-color);
+  .overlay-shadow();
   border-radius: @component-border-radius;
   atom-text-editor[mini] {
     margin-bottom: @component-padding;
