--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -109,7 +109,7 @@ atom-panel.modal {
     border: 1px solid @overlay-border-color;
     border-top: 0;
     border-radius: 0 0 @component-border-radius @component-border-radius;
-    .overlay-shadow(@base-shadow-color);
+    .overlay-shadow();
   }
 
   &::after {
