--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -1,8 +1,8 @@
 .tab-bar {
   height: @tab-bar-height + 1px;
   background: @tab-bar-background-color;
-  border-bottom: 1px solid @base-border-color;
-  z-index: 1003;
+  border-bottom: 1px solid @tab-bar-border-color;
+  z-index: 2001;
 
   .tab {
     .text(normal);
@@ -12,8 +12,8 @@
     margin-left: 1px;
     margin-top: @component-padding + 1px;
     background: @tab-background-color;
-    border: 1px solid transparent;
-    border-bottom: 1px solid @tab-border-color;
+    border: 1px solid @tab-border-color;
+    border-bottom: 1px solid @tab-bar-border-color;
     border-top-right-radius: @component-border-radius;
     border-top-left-radius: @component-border-radius;
 
@@ -54,8 +54,8 @@
 
     &.active {
       .text(highlight);
-      background: @app-background-color;
-      border: 1px solid @tab-border-color;
+      background: @tab-background-color-active;
+      border: 1px solid @tab-bar-border-color;
       border-bottom: 1px solid transparent;
 
       .title::before {
@@ -93,12 +93,12 @@
 
       &:hover {
         color: @text-color-highlight;
-        background: @base-panel-color;
+        background: @tool-panel-background-color;
       }
     }
   }
 
   .tab.active[data-type="TextEditor"] {
-    background: @base-background-color;
+    background: @base-input-color;
   }
 }
