--- a/styles/settings.less
+++ b/styles/settings.less
@@ -31,7 +31,7 @@
   }
 
   atom-text-editor {
-    background-color: @base-background-color !important;
+    background-color: @base-input-color !important;
     color: @text-color !important;
     opacity: 1.0 !important;
   }
