--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -1,6 +1,6 @@
 atom-workspace {
   .tree-view-resizer {
-    margin-top: -@tab-bar-height;
+    //margin-top: -@tab-bar-height;
     background-color: @tree-view-background-color;
     overflow: visible;
   }
@@ -17,13 +17,13 @@ atom-workspace {
     }
     & > .directory {
       & > .header {
-        background: @tool-panel-background-color;
-        border-bottom: 1px solid @base-border-color;
+        //background: @tool-panel-background-color;
+        //border-bottom: 1px solid @base-border-color;
         line-height: @tab-height;
         width: 100%;
         height: @tab-bar-height;
         padding-top: 8px;
-        position: fixed;
+        //position: fixed;
         z-index: 2000;
         font-weight: bold;
         color: @text-color-highlight;
@@ -34,7 +34,7 @@ atom-workspace {
       }
 
       & > .entries {
-        padding-top: @tab-bar-height + @component-padding;
+        //padding-top: @tab-bar-height + @component-padding;
       }
     }
   }
